refactor: 标签，分类重构

--- a/_posts/读书-林徽因传.md
+++ b/_posts/读书-林徽因传.md
@@ -6,6 +6,7 @@ cover_img:
 feature_img:
 description: 林徽因短暂的一生中无论事业还是爱情都丰满而精彩。在事业上她始终坚守专业满怀热情并取得了做人的成果；在爱情上她有徐志摩的追求, 金岳霖的守候, 梁思成的呵护。这不仅是因为她的美貌和才华, 更因为她外柔内韧、顽强不屈的精神。林小光著的'林徽因传(初见惊艳再见依然)'采用散文般的笔调、唯美而清丽的文字讲述了林徽因一生的心路历程。使读者对她的家世、思想、生活、爱情、事业有了一个全新的了解。伊人已逝而林徽因过人的才情与气质, 高洁的人格及其对事业的执着与献身精神将长存于后人。
 keywords: 人物传记
+categories: 读书笔记
 ---
 
 ### 书籍简介
