--- a/_posts/读书-重说中国近代史.md
+++ b/_posts/读书-重说中国近代史.md
@@ -1,7 +1,7 @@
 title: 重说中国近代史-读后感
 date: 2016-06-15 15:50:56
 categories: 读书笔记
-tags: 历史
+tags: 近代史
 ---
 
 中国近代史，是一段值得所有中国人重新去回望与深思的历史，因为彼时中国正“遭遇三千年未遇之大变局”，
