--- a/_posts/读书—变革中国.md
+++ b/_posts/读书—变革中国.md
@@ -1,7 +1,7 @@
 title: 变革中国
 date: 2016-06-15 15:24:39
 categories: 读书笔记
-tags: 
+tags: 近代史
 ---
 
 民主化（异或非民主化）吸引了当今政治辩论的大部分注意力，但开放的思想市场才是政治体制运行的关键所在，无论该体制是否是民主的。
