--- a/_posts/计算机-计算机网络.md
+++ b/_posts/计算机-计算机网络.md
@@ -1,7 +1,8 @@
 ---
-title: 面试-计算机网络及对应的协议
+title: 计算机网络及对应的协议
 date: 2018-06-23 11:11:27
-tags: 面试
+tags: 计算机网络
+categories: 计算机网络
 ---
 <!-- GFM-TOC -->
 * [一、概述](#一概述)
