--- a/_posts/算法-两个有序数组归并.md
+++ b/_posts/算法-两个有序数组归并.md
@@ -1,7 +1,9 @@
 ---
 title: 面试_两个有序数组合并
 date: 2017-06-02 23:24:14
-tags: python
+tags: 算法
+categories: 算法
+description: 已知两个有序数组, 现在要求将两个有序数组合并为一个有序数组.
 ---
 
 ## 题目
