--- a/_posts/算法-快速排序.md
+++ b/_posts/算法-快速排序.md
@@ -1,7 +1,9 @@
 ---
-title: 面试-快速排序
+title: 算法-快速排序
 date: 2016-06-23 10:07:25
-tags:
+tags: 算法
+categories: 算法
+description: 快速排序，python版本实现
 ---
 
 ```
