--- a/_posts/算法-归并排序.md
+++ b/_posts/算法-归并排序.md
@@ -2,6 +2,8 @@
 title: 归并排序
 date: 2018-08-21 14:25:29
 tags: 算法
+categories: 算法
+descripiton: 请手写归并排序，实现test_lit = [2, -1, 100, 0, 3, 4, 9, -11, 200, 1, 3] 按降序输出
 ---
 
 ## 题目
