--- a/_posts/面试-拓天速贷面试题-坐标解析系统.md
+++ b/_posts/面试-拓天速贷面试题-坐标解析系统.md
@@ -3,6 +3,7 @@ title: 坐标解析系统
 date: 2018-08-14 19:40:33
 tags: 后端
 categories: 面试
+description: 记录拓天速贷远程面试时所做的一道简单的面试题.
 ---
 
 ## 题目描述
@@ -51,7 +52,7 @@ categories: 面试
 3. 当方位为S时，执行Move操作，则y坐标-1, 其它方位执行Move操作同理
 ```
 
-# 目录结构
+## 目录结构
 ```
 ├── README.md
 ├── conftest.py
@@ -75,7 +76,7 @@ categories: 面试
 └── 题目介绍.jpg
 ```
 
-# 运行命令
+## 运行命令
 ```
 # 在tuo_tian_su_dai/目录下运行:
 
