--- a/_posts/计算机-操作系统进程调度.md
+++ b/_posts/计算机-操作系统进程调度.md
@@ -1,12 +1,7 @@
-
 title: OS-模拟进程调度实验
 date: 2015-12-08 23:13:49
-categories: 操作系统
-tags: 进程调度
-
----
-
-作者： 2015-12-09 by timelong 
+categories: OS
+tags: OS
 
 ---
 
