--- a/_posts/算法-快速排序.md
+++ b/_posts/算法-快速排序.md
@@ -6,39 +6,32 @@ categories: 算法
 description: 快速排序，python版本实现
 ---
 
-```
+## 代码实现如下
+```python
 def q_sort(my_list, start, end):
     # 判断start是否小于end, 如果为True, 则交换i, j值， 如果为False， 直接返回
     if start < end:
         i, j = start, end
-        # 设置基准数，与基准数进行比较
-        base = my_list[i]
+        base = my_list[i]  # 设置基准数，与基准数进行比较
 
         while i < j:
             while i < j and my_list[j] >= base:
-                # i < j时， 且my_list最左边my_list[j]大于base时，继续循环j，直到j <= i
-                # 或者找到my_list[j] < base 退出循环
-                j -= 1
-
-            # 找到my_list[j] < base->此时base = my_list[i]后，交换i、j位置的值
-            my_list[i] = my_list[j]
+                j -= 1  # i < j时， 且my_list最右边my_list[j]大于base时，继续循环j，直到j <= i 或者 找到my_list[j] < base 退出循环
+            my_list[i] = my_list[j]  # 找到my_list[j] < base->此时base = my_list[i]后，交换i、j位置的值
 
             while i < j and my_list[i] <= base:
-                # i < j时， 且my_list最左边my_list[j]大于base时，继续循环j，直到j <= i
-                # 或者找到my_list[i] > base 退出循环
-                i += 1
+                i += 1  # i < j时， 且my_list最左边my_list[i]小于base时，继续循环i，直到i >= j 或者 找到my_list[i] > base 退出循环
+            my_list[j] = my_list[i]  # 找到my_list[i] > base -> 此时base = my_list[i]后，交换i、j位置的值
 
-            # 找到my_list[i] > base->此时base = my_list[i]后，交换i、j位置的值
-            my_list[j] = my_list[i]
-        
-        # 做完第一轮比较后， my_list被分成两个半区，并且i = j, 此时需要将my_list[i]这个值设为base
-        my_list[i] = base
+        my_list[i] = base  # 做完第一轮比较后， my_list被分成两个半区，并且i = j, 此时需要将my_list[i]这个值设为base
 
         # 递归调用前后半区
         q_sort(my_list, start, i - 1)
         q_sort(my_list, j + 1, end)
+
     return my_list
 
+# 测试
 test_list = [0, 3, 1, 2, -1, 100, 1000, 123, 321, 11, 8]
 print(q_sort(test_list, 0, len(test_list)-1))
 ```
