--- a/_posts/算法-在一个字符串中找到第一个没有重复元素的字符并返回.md
+++ b/_posts/算法-在一个字符串中找到第一个没有重复元素的字符并返回.md
@@ -7,7 +7,6 @@ description:  在一个字符串中找到第一个没有重复元素的字符并
 ---
 
 ### 题目描述
-
 请实现一个函数用来找出字符流中第一个只出现一次的字符。例如，当从字符流中只读出前两个字符"go"时，第一个只出现一次的字符是"g"。当从该字符流中读出前六个字符“google"时，第一个只出现一次的字符是"l"。
 
 ### 输出描述:
@@ -15,7 +14,7 @@ description:  在一个字符串中找到第一个没有重复元素的字符并
 如果当前字符流没有存在出现一次的字符，返回#字符
 
 ### 题解
-```
+```python
 # coding: utf-8
 
 
@@ -55,7 +54,6 @@ print(obj.first_appearing_once())
 ```
 
 ### 思路
-
 insert函数用来接收字符，构成字符流。FirstAppearingOnce函数用来判断是否为第一个只出现一次的字符。
 
 用了字典来记录字符以及出现的次数。
