--- a/_posts/算法-归并排序.md
+++ b/_posts/算法-归并排序.md
@@ -10,11 +10,8 @@ descripiton: 请手写归并排序，实现test_lit = [2, -1, 100, 0, 3, 4, 9, -
 
 请手写归并排序，实现test_lit = [2, -1, 100, 0, 3, 4, 9, -11, 200, 1, 3] 按降序输出
 
-<!--more-->
-
-## 解答
-
-```
+## 代码
+```python
 # coding: utf-8
 
 def merge_sort(nums):
