--- a/_posts/算法-深入理解快速排序.md
+++ b/_posts/算法-深入理解快速排序.md
@@ -101,12 +101,7 @@ print(q_sort(test_list, 0, len(test_list)-1))
 - 大于主元就把这个数与gt指向的数交换，gt自减1，此时i还得不能自增，因为它不知道gt用一个什么样的元素跟它交换，所以留到下一次循环判断交换过来的这个元素的去留
 - 等于主元就不用跟谁进行交换，直接自增1就可以
 
-三向切分快速排序如下：
-```python
-
-```
-
-## 注意：
+## 注意
 目前所实现的三向切分并不完美，虽然它解决了大量重复元素的不必要排序，将排序时间从线性对数级别降到线性级别，但它在数组元素重复不多的情况下，它的交换次数比标准的二分法多很多。
 不过在90年代J.Bently和D.Mcllroy找到一个聪明的办法解决了这个问题。接下来的快速三向切分就是解决办法。 快速的三向切分:
 ```
@@ -128,10 +123,7 @@ print(q_sort(test_list, 0, len(test_list)-1))
 
 同理，对于j从right向左遍历也是一样。当 i > j 时，切分也就结束，最后还要把数组调整为左边小右边大，中间等于主元的形式，再依次排序左边和右边。
 
-在这个算法中，既解决了重复元素排序的问题，又解决了少量元素重复时，交换次数过多的问题。 快速的三向切分的实现:
-```python
-
-```
+在这个算法中，既解决了重复元素排序的问题，又解决了少量元素重复时，交换次数过多的问题。
 
 ## 最后
 快速排序不是稳定的排序算法，所谓稳定就是当待排数组中存在重复元素的时候，排序后重复元素的相对顺序不会改变。
