--- a/_posts/数据库-系统原理.md
+++ b/_posts/数据库-系统原理.md
@@ -17,7 +17,7 @@ categories: 数据库
 ## 概念
 
 事务指的是满足 ACID 特性的一组操作，可以通过 Commit 提交一个事务，也可以使用 Rollback 进行回滚。
-![数据库系统原理](http://timilong.com/185b9c49-4c13-4241-a848-fbff85c03a64.png)
+![数据库系统原理](http://qiniucdn.timilong.com/185b9c49-4c13-4241-a848-fbff85c03a64.png)
 
 ## ACID
 
@@ -49,7 +49,7 @@ categories: 数据库
 - 在无并发的情况下，事务串行执行，隔离性一定能够满足。此时只要能满足原子性，就一定能满足一致性。
 - 在并发的情况下，多个事务并行执行，事务不仅要满足原子性，还需要满足隔离性，才能满足一致性。
 - 事务满足持久化是为了能应对数据库崩溃的情况。
-![数据库系统原理](http://timilong.com/a58e294a-615d-4ea0-9fbf-064a6daec4b2.png)
+![数据库系统原理](http://qiniucdn.timilong.com/a58e294a-615d-4ea0-9fbf-064a6daec4b2.png)
 
 ## AUTOCOMMIT
 
@@ -63,24 +63,24 @@ MySQL 默认采用自动提交模式。也就是说，如果不显式使用`STAR
 
 T<sub>1</sub> 和 T<sub>2</sub> 两个事务都对一个数据进行修改，T<sub>1</sub> 先修改，T<sub>2</sub> 随后修改，T<sub>2</sub> 的修改覆盖了 T<sub>1</sub> 的修改。
 
-![数据库系统原理](http://timilong.com/88ff46b3-028a-4dbb-a572-1f062b8b96d3.png)
+![数据库系统原理](http://qiniucdn.timilong.com/88ff46b3-028a-4dbb-a572-1f062b8b96d3.png)
 
 ## 读脏数据
 T<sub>1</sub> 修改一个数据，T<sub>2</sub> 随后读取这个数据。如果 T<sub>1</sub> 撤销了这次修改，那么 T<sub>2</sub> 读取的数据是脏数据。
 
-![数据库系统原理](http://timilong.com/dd782132-d830-4c55-9884-cfac0a541b8e.png)
+![数据库系统原理](http://qiniucdn.timilong.com/dd782132-d830-4c55-9884-cfac0a541b8e.png)
 
 ## 不可重复读
 
 T<sub>2</sub> 读取一个数据，T<sub>1</sub> 对该数据做了修改。如果 T<sub>2</sub> 再次读取这个数据，此时读取的结果和第一次读取的结果不同。
 
-![数据库系统原理](http://timilong.com/c8d18ca9-0b09-441a-9a0c-fb063630d708.png)
+![数据库系统原理](http://qiniucdn.timilong.com/c8d18ca9-0b09-441a-9a0c-fb063630d708.png)
 
 ## 幻影读
 
 T<sub>1</sub> 读取某个范围的数据，T<sub>2</sub> 在这个范围内插入新的数据，T<sub>1</sub> 再次读取这个范围的数据，此时读取的结果和和第一次读取的结果不同。
 
-![数据库系统原理](http://timilong.com/72fe492e-f1cb-4cfc-92f8-412fb3ae6fec.png)
+![数据库系统原理](http://qiniucdn.timilong.com/72fe492e-f1cb-4cfc-92f8-412fb3ae6fec.png)
 
 ----
 
@@ -98,7 +98,7 @@ MySQL 中提供了两种封锁粒度：行级锁以及表级锁。
 
 在选择封锁粒度时，需要在锁开销和并发程度之间做一个权衡。
 
-![数据库系统原理](http://timilong.com/1a851e90-0d5c-4d4f-ac54-34c20ecfb903.jpg)
+![数据库系统原理](http://qiniucdn.timilong.com/1a851e90-0d5c-4d4f-ac54-34c20ecfb903.jpg)
 
 ## 封锁类型
 
@@ -289,7 +289,7 @@ MVCC 在每行记录后面都保存着两个隐藏的列，用来存储两个版
 
 MVCC 使用到的快照存储在 Undo 日志中，该日志通过回滚指针把一个数据行（Record）的所有快照连接起来。
 
-![数据库系统原理](http://timilong.com/e41405a8-7c05-4f70-8092-e961e28d3112.jpg)
+![数据库系统原理](http://qiniucdn.timilong.com/e41405a8-7c05-4f70-8092-e961e28d3112.jpg)
 
 ## 实现过程
 
@@ -405,7 +405,7 @@ SELECT c FROM t WHERE c BETWEEN 10 and 20 FOR UPDATE;
 
 高级别范式的依赖于低级别的范式，1NF 是最低级别的范式。
 
-![数据库系统原理](http://timilong.com/c2d343f7-604c-4856-9a3c-c71d6f67fecc.png)
+![数据库系统原理](http://qiniucdn.timilong.com/c2d343f7-604c-4856-9a3c-c71d6f67fecc.png)
 
 ### 第一范式 (1NF)
 
@@ -504,27 +504,27 @@ Entity-Relationship，有三个组成部分：实体、属性、联系。
 - 如果是多对多，画两个不带箭头的线段。
 
 下图的 Course 和 Student 是一对多的关系。
-![数据库系统原理](http://timilong.com/292b4a35-4507-4256-84ff-c218f108ee31.jpg)
+![数据库系统原理](http://qiniucdn.timilong.com/292b4a35-4507-4256-84ff-c218f108ee31.jpg)
 
 ## 表示出现多次的关系
 
 一个实体在联系出现几次，就要用几条线连接。
 
 下图表示一个课程的先修关系，先修关系出现两个 Course 实体，第一个是先修课程，后一个是后修课程，因此需要用两条线来表示这种关系。
-![数据库系统原理](http://timilong.com/8b798007-e0fb-420c-b981-ead215692417.jpg)
+![数据库系统原理](http://qiniucdn.timilong.com/8b798007-e0fb-420c-b981-ead215692417.jpg)
 
 ## 联系的多向性
 
 虽然老师可以开设多门课，并且可以教授多名学生，但是对于特定的学生和课程，只有一个老师教授，这就构成了一个三元联系。
-![数据库系统原理](http://timilong.com/423f2a40-bee1-488e-b460-8e76c48ee560.png)
+![数据库系统原理](http://qiniucdn.timilong.com/423f2a40-bee1-488e-b460-8e76c48ee560.png)
 
 一般只使用二元联系，可以把多元联系转换为二元联系。
-![数据库系统原理](http://timilong.com/de9b9ea0-1327-4865-93e5-6f805c48bc9e.png)
+![数据库系统原理](http://qiniucdn.timilong.com/de9b9ea0-1327-4865-93e5-6f805c48bc9e.png)
 
 ## 表示子类
 
 用一个三角形和两条线来连接类和子类，与子类有关的属性和联系都连到子类上，而与父类和子类都有关的连到父类上。
-![数据库系统原理](http://timilong.com/7ec9d619-fa60-4a2b-95aa-bf1a62aad408.jpg)
+![数据库系统原理](http://qiniucdn.timilong.com/7ec9d619-fa60-4a2b-95aa-bf1a62aad408.jpg)
 
 # 参考资料
 
