--- a/_posts/读书-重说中国近代史.md
+++ b/_posts/读书-重说中国近代史.md
@@ -2,14 +2,14 @@ title: 重说中国近代史-读后感
 date: 2016-06-15 15:50:56
 categories: 读书笔记
 tags: 近代史
+description: 中国近代史，是一段值得所有中国人重新去回望与深思的历史，因为彼时中国正“遭遇三千年未遇之大变局”，
 ---
 
-中国近代史，是一段值得所有中国人重新去回望与深思的历史，因为彼时中国正“遭遇三千年未遇之大变局”，
-中国与西方、清廷与民间、满族与汉族士人、洋教与本土信仰、枪杆与笔杆、造反和维新、科举与革命……有着太多太多说不完的话题，
-其中的精彩与遗憾，让人唏嘘、慨叹，也让人思索。
+> 中国近代史，是一段值得所有中国人重新去回望与深思的历史，因为彼时中国正“遭遇三千年未遇之大变局”，
+> 中国与西方、清廷与民间、满族与汉族士人、洋教与本土信仰、枪杆与笔杆、造反和维新、科举与革命……有着太多太多说不完的话题，
+> 其中的精彩与遗憾，让人唏嘘、慨叹，也让人思索。
 
-![重说中国近代史](https://img1.doubanio.com/mpic/s7411449.jpg)
-<!--more-->
+![重说中国近代史](http://qiniucdn.timilong.com/%E9%87%8D%E8%AF%B4%E4%B8%AD%E5%9B%BD%E8%BF%91%E4%BB%A3%E5%8F%B2.jpg)
 
 胡适曾说过“历史是一个小姑娘，可以任人打扮”，也正因为如此，“历史是人写的”，同一个阶段的历史、同一个历史事件，不同的人都可以说出不同的味道。
 现今有许多人回望和反思中国近代史，纷纷在社会上发表自己的见解，而在众多解读者中，中国人民大学教授张鸣先生，以“还原被扭曲的历史，
