--- a/_posts/读书-明朝那些事.md
+++ b/_posts/读书-明朝那些事.md
@@ -2,17 +2,14 @@ title: 《明朝那些事》-读书笔记
 date: 2016-06-15 00:34:56
 categories: 读书笔记
 tags: 历史
+description: 权力、希望、痛苦、愤怒、犹豫、冷漠、热情、刚强、软肉、气节、度量、孤独、残暴、宽恕、忍耐、邪恶、正义、真理、坚持、妥协、善良、忠诚。 按自己的方式，去度过人生。 ---读《明朝那些事儿》后记
 ---
 
-按自己的方式，去度过人生。
-             ---读《明朝那些事儿》后记
-
+## 导读
 权力、希望、痛苦、愤怒、犹豫、冷漠、热情、刚强、软肉、气节、度量、孤独、残暴、宽恕、忍耐、邪恶、正义、真理、坚持、妥协、善良、忠诚。
 ![明朝那些事](http://img14.360buyimg.com/n1/jfs/t1951/106/1428977681/394669/64cdeb4a/56a6ee8dN08733225.jpg)
-<!--more-->
 
----
-
+## 简介
 从跟随当年那个给地主放牛的小屁孩起义的小兵，到跟随道衍的小和尚，从见识于谦力挽狂澜的小吏，到独在异乡为身是客的朱祁镇的侍从，
 从陪同王守仁前往龙镇驿站的家仆，到连中三元张居正的书童，从汤显祖的粉丝，到带走袁崇焕人头的刀斧手，最后看着崇祯上吊的小百姓......
 整个过程三百多年，说长不说短不短。对于时间，我们无法给与最公正的评论。很久以前我收藏过一句话：
