--- a/_posts/计算机-关于负载均衡的一切-转载.md
+++ b/_posts/计算机-关于负载均衡的一切-转载.md
@@ -2,7 +2,7 @@
 title: 计算机-关于负载均衡的一切-转载
 date: 2018-11-20 10:13:00
 tags: Nginx
-cover_img:
+cover_img: http://qiniucdn.timilong.com/fuzaijunheng_1.png
 feature_img:
 description: 负载均衡（Load Balance）是分布式系统架构设计中必须考虑的因素之一，它通常是指，将请求/数据均匀分摊到多个操作单元上执行，负载均衡的关键在于均匀。
 keywords: Nginx, 负载均衡
