--- a/_posts/随笔-圆周率.md
+++ b/_posts/随笔-圆周率.md
@@ -2,7 +2,7 @@
 title: 随笔-圆周率
 date: 2018-11-13 13:28:53
 tags: 随笔
-cover_img:
+cover_img: http://qiniucdn.timilong.com/1542968647617.jpg
 feature_img:
 description: 圆周率小数点后1600余位...
 keywords: 随笔
