--- a/_posts/纪录片-军工记忆第二季第一集第一颗氢弹.md
+++ b/_posts/纪录片-军工记忆第二季第一集第一颗氢弹.md
@@ -2,7 +2,7 @@
 title: 纪录片-军工记忆第二季第一集第一颗氢弹
 date: 2018-10-27 23:08:13
 tags: 纪录片
-cover_img:
+cover_img: http://qiniucdn.timilong.com/1542968645345.jpg
 feature_img:
 description: 那是新中国初创的遥远年代，为了国家的长久安全，共和国急需一款定海神针般的战略武器。于是，一群中华民族的优秀儿女，抛家舍业，隐姓埋名，在极端困难的条件下，在现代科学的最前沿，凭着一股牺牲精神，艰苦奋斗，攻关克难，完成了这个几乎不可能完成的任务，他们的丰功伟绩，应为后世永远铭记。
 keywords: 随笔，纪录片
