--- a/_posts/leetcode-136-137-260只出现一次的数字.md
+++ b/_posts/leetcode-136-137-260只出现一次的数字.md
@@ -2,6 +2,7 @@ title: leetcode-136、137、260只出现一次的数字
 date: 2017-03-1 21:37:54
 categories: leetcode
 tags: leetcode
+cover_img: http://qiniucdn.timilong.com/1543288417460.jpg
 ---
 
 ## single_number_1
