--- a/_posts/算法-归并排序.md
+++ b/_posts/算法-归并排序.md
@@ -1,9 +1,10 @@
 ---
-title: 归并排序
+title: 算法-归并排序
 date: 2018-08-21 14:25:29
 tags: 算法
+cover_img: http://desk.fd.zol-img.com.cn/t_s1440x900c5/g5/M00/01/0E/ChMkJlbKwaiIIgL3AAEV0eM7MicAALGbwDwInkAARXp501.jpg?downfile=1543292294851.jpg
 categories: 算法
-descripiton: 请手写归并排序，实现test_lit = [2, -1, 100, 0, 3, 4, 9, -11, 200, 1, 3] 按降序输出
+description: 请手写归并排序，实现test_lit = [2, -1, 100, 0, 3, 4, 9, -11, 200, 1, 3] 按降序输出
 ---
 
 ## 题目
