--- a/_posts/读书-世界因你不同-李开复传.md
+++ b/_posts/读书-世界因你不同-李开复传.md
@@ -2,24 +2,16 @@ title: 《世界因你不同-李开复自传》-读书笔记
 date: 2015-12-01 16:22:20
 categories: 读书笔记
 tags: 人物传记
+cover_img: http://d.hiphotos.baidu.com/baike/c0%3Dbaike92%2C5%2C5%2C92%2C30/sign=3135c05ea9d3fd1f2204aa6851274e7a/9f2f070828381f305a9aded9a8014c086e06f03b.jpg
+description: 当你听从了内心的声音，你就会全力以赴地为那个声音努力，拼搏，直到到达彼岸
 
 ---
 
-![封面](http://d.hiphotos.baidu.com/baike/c0%3Dbaike92%2C5%2C5%2C92%2C30/sign=3135c05ea9d3fd1f2204aa6851274e7a/9f2f070828381f305a9aded9a8014c086e06f03b.jpg)
+## 文摘
 
-作者： 李开复，范海涛
-
----
-
-当你听从了内心的声音，你就会全力以赴地为那个声音努力，拼搏，直到到达彼岸
-
- Google“平等、创新、快乐、无畏”
+Google: “平等、创新、快乐、无畏”
 
 只有发自内心的选择才能够支撑你渡过一个又一个难关。
-
-以上是摘要
-<!--more-->
-以下是余下全文
 
 题目是《真正实现你的童年梦想》，该讲座的视频在不同视频网站上被点播了上千万次
 
@@ -44,9 +36,8 @@ tags: 人物传记
 
 知道什么是 make a difference(制造不同)吗?想象有两个世界，一个世界中有你，一个世界中没有你，让两者的不同最大，最大化你的影响力，这就是你一生的意义。
 
-兴趣就是天赋， 天赋就是兴趣。
-You are good at what you love；you love what you are good at.
- 
+兴趣就是天赋， 天赋就是兴趣。 You are good at what you love；you love what you are good at.
+
 “成功就是当你醒来，无论身在何处，无论年龄多大，你很快从床上弹起，因为你迫不及待地想去做你爱做的、你深信的、你有才华做的工作。这工作比你个人伟大、神圣。你迫不及待地要起床，跳进它的怀里。
 
 读博士， 就是挑选一个狭窄并重要的领域作研究，毕业的时候交出一篇世界一流的毕业论文，成为这个领域里世界首屈一指的专家。任何人提到这个领域的时候，都会想起你的名字。
@@ -93,25 +84,24 @@ Pervasive through Focus——经过专注，达到普及‚是否可能有这么
 
 成功并没有绝对的意义，成功，就是做最好的自己，并把最好的你呈现出来。
 
----
 
-### 李开复推荐的几本关于大学教育的书籍？
+## 李开复推荐的几本关于大学教育的书籍？
 
 加州大学校长卡拉克·科尔(ClarkKerr)提倡研究性大学的 《大学的用处》(the Uses of the Universi，ty)，
 他的自传《金色和蓝色》(The Gold and the Blue)
 批评大学教育商业化的 《 市 场 中 的 大 学 》 (Universities inthe Marketplace)
 《美国大学的崛起》(The Role ofthe American University)
 
----
 
-### 个人的一些感想
+## 个人的一些感想
 
 本文写于2015·08·06
 
 我是8月2日（周日）中午回到家中的，到今天是第四天，晚21:30.
 3号开始读开复先生的《世界因你不同》的pdf版本，通读，感触颇深，写下自己的一些感想吧！
-   开复先生，应该算作中国IT的前辈或者是第一代人吧，从副教授，苹果，SGI，微软，google，创建自己的创梦工厂，帮助中国年轻一代人接受世界新技术，新知识。引领中国的大学生，更好的求职。
-   开复先生，在为中国的年轻一代是尽心尽责的，开复先生多次提到其父的重托，可想，开复本人没有这么崇高的志向，恐怕在众多选择之中，并不会回到自己的祖国的吧。
+> 开复先生，应该算作中国IT的前辈或者是第一代人吧，从副教授，苹果，SGI，微软，google，创建自己的创梦工厂，帮助中国年轻一代人接受世界新技术，新知识。引领中国的大学生，更好的求职。
+> 开复先生，在为中国的年轻一代是尽心尽责的，开复先生多次提到其父的重托，可想，开复本人没有这么崇高的志向，恐怕在众多选择之中，并不会回到自己的祖国的吧。
+
 特别喜欢开复先生的哪种坚持回到自己祖国为年轻一代谋求机遇发展的坚持和行动并行的心态。用行动，用言行去感染身边的同事，下属，朋友，当然，在开复那里，可能没有下属这一说吧。
 当看到开复先生因为和微软公司长达两个月之久的官司胜利时候，由衷的高兴，当看到他因为官司而瘦掉15斤时，又是那么的揪心，为他身体担心。
 很有幸，他赢了，他回到了中国，他有来过民大演讲。
