--- a/_posts/读书-程序员从优秀到卓越.md
+++ b/_posts/读书-程序员从优秀到卓越.md
@@ -2,26 +2,16 @@ title: 《程序员从优秀到卓越》读书笔记
 date: 2015-12-01 15:37
 categories: 读书笔记
 tags: 经验
-
+cover_img: http://img10.360buyimg.com/n1/g17/M00/00/02/rBEbSFNpjIYIAAAAAALXt94NlEUAAAA9gDrSd8AAtfP442.jpg
+description: 科里定律-坚守一个目标。
 ---
 
-![封面](http://img10.360buyimg.com/n1/g17/M00/00/02/rBEbSFNpjIYIAAAAAALXt94NlEUAAAA9gDrSd8AAtfP442.jpg)
-
-作者：Jeff Atwood
-
----
-
-科里定律：坚守一个目标。
-几个核心原则都有体现： 
+## 几个核心原则都有体现
 1、Don't Repeat Yourself(DRY，避免重复)
 
 2、Once And Only Once(OAOO，唯一一次)，每个行为的声明应当发生一次，并且只发生一次。
 
-3、Single Point Of Truth（SPOT,单点真理），重复会造成不一致，并以一种微妙的方式破坏代码。 复杂是一种成本，不要加倍付出。
-
-以上是摘要
-<!--more-->
-以下是余下全文
+3、Single Point Of Truth（SPOT, 单点真理），重复会造成不一致，并以一种微妙的方式破坏代码。 复杂是一种成本，不要加倍付出。
 
 4、作为一位专家，重要的不是告诉别人你知道什麽，而是要清楚你应该问什麽样的问题，并且灵活运用你所掌握的知识去解决眼下的具体问题。作为专家，你的作用是提供明智的、可行的方向。
 
@@ -33,6 +23,13 @@ tags: 经验
 
 8、没有人会在临终前说，“哎，我懊悔没有花更多的时间与我的计算机单独相处。”
 
-### 书评（摘抄自豆瓣）：
-关于作者介绍里有一条是格外显眼的，作者Jeff Atwood和Joel Spolsky联合创办了stackoverflow.com网站，做互联网行业的程序员会有些了解，作为技术领域的一个庞大的讨论社区，stackoverflow这个平台技术人员的活跃程度是很高的，经常会有些很有见地的代码出现。其中就包括了一些对Ruby On Rails框架源代码的某些Bug的规避方案，具体哪些我也不记得了，反正有技术问题了，我经常会在上面找解决方案。而在互联网网站规模排名中，Stack Exchange现在位于前150大之列。并不是说网站很大了作者就有多牛多牛，而是他们对于程序的经验是程序员值得学习的。
+
+## 书评（摘抄自豆瓣）
+关于作者介绍里有一条是格外显眼的，作者Jeff Atwood和Joel Spolsky联合创办了stackoverflow.com网站。
+
+互联网行业的程序员会有些了解，作为技术领域的一个庞大的讨论社区，stackoverflow这个平台技术人员的活跃程度是很高的，经常会有些很有见地的代码出现。
+
+其中就包括了一些对Ruby On Rails框架源代码的某些Bug的规避方案，具体哪些我也不记得了，反正有技术问题了，我经常会在上面找解决方案。
+
+而在互联网网站规模排名中，Stack Exchange现在位于前150大之列。并不是说网站很大了作者就有多牛多牛，而是他们对于程序的经验是程序员值得学习的。
 
