--- a/_posts/读书-三体1.md
+++ b/_posts/读书-三体1.md
@@ -2,13 +2,13 @@ title: 《三体1》-读书笔记
 date: 2015-12-04 19:41:44
 categories: 读书笔记
 tags: 科幻小说
+cover_img: http://qiniucdn.timilong.com/santi-liucixin.jpg
 description: 三体，是我看过的最伟大的科幻小说，没有之一。
 
 ---
+![封面](http://qiniucdn.timilong.com/santi-liucixin.jpg)
 
 ## 简介
-
-![封面](http://qiniucdn.timilong.com/santi-liucixin.jpg)
 
 《三体》三部曲，又名“地球往事”三部曲，作者刘慈欣。该系列小说由《三体》、《黑暗森林》、《死神永生》三部小说组成，于2006年至2010年由《科幻世界》杂志连载，出版。
 《三体》三部曲讲述了地球文明在宇宙中的兴衰历程。作品对人类历史、物理学、天文学、社会学及哲学等均有涉及，从科幻的角度对人性进行了深入探讨，全书格局宏大，立意高远，被誉为迄今为止中国当代最杰出的科幻小说，是中国科幻文学的里程碑之作，将中国科幻推上了世界的高度。
@@ -56,8 +56,4 @@ description: 三体，是我看过的最伟大的科幻小说，没有之一。
 
 “这是人类的落日……”
 ——叶文洁透过雷达峰、透过红岸基地的天空，仿佛看到了很远很远……
-
----
-
-2015年9月阅读
 
