--- a/_posts/读书-沃兹传-与苹果一起疯狂.md
+++ b/_posts/读书-沃兹传-与苹果一起疯狂.md
@@ -1,23 +1,42 @@
 title: 《沃兹传:与苹果一起疯狂》读书笔记
 date: 2015-12-03 15:37
 categories: 读书笔记
+cover_img: http://qiniucdn.timilong.com/wozizhuan-apple.jpg
 tags: 人物传记
-
+description: 蒂夫 • 沃兹尼亚克是苹果公司最早的两位创始人之一，也是Apple I和Apple II的唯一发明者，这两款产品为个人电脑时代的来临揭开了伟大的序幕。
 ---
 
-![封面](http://img3.douban.com/lpic/s26098864.jpg)
+## 简介
+![封面](http://qiniucdn.timilong.com/wozizhuan-apple.jpg)
 
-作者：吉娜·史密斯 
+《沃兹传:与苹果一起疯狂》的传主史, 蒂夫 • 沃兹尼亚克是苹果公司最早的两位创始人之一，也是Apple I和Apple II的唯一发明者，这两款产品为个人电脑时代的来临揭开了伟大的序幕。
 
----
+在计算机发展史上，沃兹尼亚克代表的是在一片创世记的浑沌中，照见未来的科技天才。
 
-《沃兹传:与苹果一起疯狂》的传主史蒂夫•沃兹尼亚克是苹果公司最早的两位创始人之一，也是Apple I和Apple II的唯一发明者，这两款产品为个人电脑时代的来临揭开了伟大的序幕。在计算机发展史上，沃兹尼亚克代表的是在一片创世记的浑沌中，照见未来的科技天才。通过Apple II，沃兹尼亚克立下了某些延续至今的计算机标准，并推动了整个硬件设备与软件程序产业的发展。
-《沃兹传:与苹果一起疯狂》既回顾了他的个人成长历程、对电子产品的由衷热爱、研制Apple I和Apple II的缘起及诸多技术细节，也有创立和最终离开苹果公司的真相。难能可贵的是，沃兹在书中坦言他所获得的巨大成就、所经历的重大错误，甚至，那次扭转他人生态度的飞机失事事件。亲历苹果非凡成长历史的沃兹尼亚克，也为世人揭开了一直笼罩在苹果早期历程上的神秘面纱，回应了外界多年来的诸多误读。
-自称“技术极客”的沃兹生性腼腆，却也非常喜欢恶作剧。书中他毫无保留地吐露心声，一路和读者分享了许许多多让人捧腹的趣事，让我们能够瞥见在沃兹尼亚克粗犷的外表下自由不羁的心灵。
+通过Apple II，沃兹尼亚克立下了某些延续至今的计算机标准，并推动了整个硬件设备与软件程序产业的发展。
 
----
+《沃兹传:与苹果一起疯狂》既回顾了他的个人成长历程、对电子产品的由衷热爱、研制Apple I和Apple II的缘起及诸多技术细节，也有创立和最终离开苹果公司的真相。
 
- 我对创业后所要面临的那些管理责任——推动周围的人去工作、管理公司事务、控制员工工作——有着十足的不安全感。我不适合做管理工作，而且以前就说过：我永远不想成为权威人士。 我宁愿留在惠普做我的全职工作，而把设计电脑当成业余爱好。 艾伦说：“你可以做个工程师，之后成为经理来赚大钱，或者可以一直当工程师赚大钱。” 这才是我需要听到的。我马上给史蒂夫乔布斯打了电话，告诉他我的新决定。他激动极了。
+难能可贵的是，沃兹在书中坦言他所获得的巨大成就、所经历的重大错误，甚至，那次扭转他人生态度的飞机失事事件。
+
+亲历苹果非凡成长历史的沃兹尼亚克，也为世人揭开了一直笼罩在苹果早期历程上的神秘面纱，回应了外界多年来的诸多误读。
+
+自称“技术极客”的沃兹生性腼腆，却也非常喜欢恶作剧。
+
+书中他毫无保留地吐露心声，一路和读者分享了许许多多让人捧腹的趣事，让我们能够瞥见在沃兹尼亚克粗犷的外表下自由不羁的心灵。
+
+
+# 文摘
+
+我对创业后所要面临的那些管理责任——推动周围的人去工作、管理公司事务、控制员工工作——有着十足的不安全感。
+
+我不适合做管理工作，而且以前就说过：
+> 我永远不想成为权威人士。 我宁愿留在惠普做我的全职工作，而把设计电脑当成业余爱好。
+
+艾伦说：
+> “你可以做个工程师，之后成为经理来赚大钱，或者可以一直当工程师赚大钱。” 
+
+这才是我需要听到的。我马上给史蒂夫乔布斯打了电话，告诉他我的新决定。他激动极了。
 
 当时我并没意识到这一天有多重要。1975年6月29号，星期天，是个重要的日子。有史以来，键盘上敲打的符号第一次在屏幕上直接显示出来。
 
@@ -25,14 +44,14 @@ tags: 人物传记
 
 从那一刻起，我就看清了政府，他们以公民为敌，把这一切当作游戏，这与我想象中的政府完全相反，你无法相信他们是在为民服务。这次遭遇给了我一个惨痛的教训，政府、权威，甚至是警察，你都不能相信他们真的会为你的利益着想。
 
-对政府行为，我所感受的震惊和恶心非笔墨所能形容：他们将我们的人生玩弄于股掌之上，并非如父亲所说，他们关心民众疾苦。我曾经坚信政府会保护我们，但事实并非如此。自那之后，我只相信政府会为自身利益服务，并为此不惜一切手段。他们做事没有道理可言，以最糟的方式玩弄了我的人生。
+对政府行为，我所感受的震惊和恶心非笔墨所能形容：
+> 他们将我们的人生玩弄于股掌之上，并非如父亲所说，他们关心民众疾苦。我曾经坚信政府会保护我们，但事实并非如此。自那之后，我只相信政府会为自身利益服务，并为此不惜一切手段。他们做事没有道理可言，以最糟的方式玩弄了我的人生。
 
 在我心中，拥有欢笑的人生远比掌握管理权重要得多，不过这只是我的观点。我认为快乐是人生中最重要的事，第二种人看上去有点傻傻的，但他却是最快乐的，我一直想成为这样的人。 因此，我从来不会把《打砖块》的酬劳风波放在心上。尽管你可以不认同对方的做法，甚至可以与他断绝关系，但是你没有必要跟他决裂。你要接受人与人性格不同这一事实。这就是快乐生活的窍门。 甚至在我和史蒂夫创立苹果之前，我就明白了这一道理。
 
-但史蒂夫有一个很好的论点。当时我们在他的车里，我直到今天还清楚地记得他当时说的话，仿佛这一切发生在昨天一样。他说：“好，就算赔钱，我们也拥有了自己的公司。我们一辈子还有比这更好的创立公司的机会吗？” 这句“一生中最好的机会”打动了我，让我激动万分。两个最好的朋友开始创业啦，噢，当时我就很清楚我会迈出这一步的。我怎么能拒绝这一诱惑人的提议呢？
+但史蒂夫有一个很好的论点。当时我们在他的车里，我直到今天还清楚地记得他当时说的话，仿佛这一切发生在昨天一样。他说：
+> “好，就算赔钱，我们也拥有了自己的公司。我们一辈子还有比这更好的创立公司的机会吗？” 
+
+这句“一生中最好的机会”打动了我，让我激动万分。两个最好的朋友开始创业啦，噢，当时我就很清楚我会迈出这一步的。我怎么能拒绝这一诱惑人的提议呢？
 
 奇怪的是，当我着手研究后来被称为Apple I的计算机主板时，我就想到了这样两个个性迥异的人：一个人非常成功，他毕生致力于经营企业，长于销售，保持了很好的盈利势头；而另一个人则常常闲晃，笑口常开，尽情享受玩笑、技术和世界上其他一些有趣的事情。 在我心中，拥有欢笑的人生远比掌握管理权重要得多，不过这只是我的观点。我认为快乐的是人生中最重要的事，第二种人看上去有点傻傻的，但他却是最快乐的，我一直想成为这样的人。 因此，我从来不会把《打砖块》的酬劳风波放在心上。尽管你可以不认同对方的做法，甚至可以与他断绝关系，但是你没有必要跟他决裂。你要接受人与人性格不同这一事实。这就是快乐生活的窍门。
-
----
-
-2015年国庆间阅读。
