--- a/_posts/读书-浪潮之巅.md
+++ b/_posts/读书-浪潮之巅.md
@@ -2,24 +2,16 @@ title: 《浪潮之巅》读书笔记
 date: 2015-12-01 16:03
 categories: 读书笔记
 tags: 近代史
-
+cover_img: http://a.hiphotos.baidu.com/baike/c0%3Dbaike116%2C5%2C5%2C116%2C38/sign=c14ce66439dbb6fd3156ed74684dc07d/aa64034f78f0f7363f551e9e0a55b319eac41381.jpg
+description: 摩尔定律-“每18个月，IT产品性能翻一番or相同性能的IT产品价钱降一半”必须快速开发产品（要有钱啊）；新应用的大量涌现；现在的研发必须针对多年后的市场。
 ---
 
-![封面](http://a.hiphotos.baidu.com/baike/c0%3Dbaike116%2C5%2C5%2C116%2C38/sign=c14ce66439dbb6fd3156ed74684dc07d/aa64034f78f0f7363f551e9e0a55b319eac41381.jpg)
-
-作者：吴军
-
----
-
+## 文摘
 1.摩尔定律（Gordon Moore）“每18个月，IT产品性能翻一番or相同性能的IT产品价钱降一半”必须快速开发产品（要有钱啊）；新应用的大量涌现；现在的研发必须针对多年后的市场。
 
 2.安迪-比尔定律“比尔盖茨要拿走安迪格鲁夫所给的！即软件把硬件提示带来的好处用光鸟～”软件的更新带动了硬件的更新，微软为首的软件开发商迫使用户更新机器，让惠普戴尔等公司收益，同时带动英特尔等公司的发展。
 
 3.反摩尔定律（Eric Schmidt）“一个IT公司如果今天和18个月前卖掉同样多的相同产品，营业额就要降一半。”硬件设备公司鸭梨很大啊，需要与摩尔定律赛跑。但这也逼着大家寻求产生质变的技术革新，促进了信息产业的飞速发展，也给了能抓住机遇的小公司腾飞的机会。
-
-以上是摘要
-<!--more-->
-以下是余下全文
 
 4.70-20-10律（John Sculley）“一般来说，在信息科技的某个领域，存在一个占据着百分之六七十市场的老大，还有一个有着稳定的百分之二三十的市场的老二，剩下一群小商家占据百分之十或更少的市场。”行业霸主靠制定规则占据了很大优势，其他公司凭借技术和管理的小优势都不足以抗衡，这就是左右游戏规则的威力。例子：微软制定软件标准，Google阴影下的SEO，高通的CDMA2000标准。IT领域产生这种现象的原因：低制造成本，各环节的耦合性强，硬性的性能指标，反垄断法。
 
@@ -60,3 +52,4 @@ tags: 近代史
 22.好的商业模式都非常简单，即使是外行业一眼能看清楚。
 
 23.科技的发展不是均匀的，而是以浪潮的形式出现。对个人来讲，看清楚浪潮，赶上浪潮，便不枉此生。
+
