--- a/_posts/leetcode-136-137-260只出现一次的数字.md
+++ b/_posts/leetcode-136-137-260只出现一次的数字.md
@@ -1,13 +1,15 @@
+---
 title: leetcode-136、137、260只出现一次的数字
 date: 2017-03-1 21:37:54
 categories: leetcode
 tags: leetcode
 cover_img: http://qiniucdn.timilong.com/1543288417460.jpg
+description: leetcode上的136题、137题、260题的题解。
 ---
 
 ## single_number_1
 
-```
+```python
 #! /usr/bin/python3
 # coding: utf-8    
 """
@@ -20,6 +22,7 @@ Note:
 Solution:
     异或运算 0^1 = 1  and 1^1 = 0 and 0^0 = 1
 """
+
 class Solution(object):
     def singleNumber(self, nums):
         """
@@ -39,7 +42,7 @@ class Solution(object):
 
 ## single_number_2
 
-```
+```python
 #! /usr/bin/python3
 # coding: utf-8
 
@@ -54,6 +57,7 @@ Solution:
     # 方法1: 利用set之和*3 - list之和 = 2*res
     # 方法2: 利用异或运算、或运算、与运算、非运算
 """
+
 class Solution(object):
     def singleNumber(self, nums):
         # 方法1: 利用
@@ -89,7 +93,7 @@ class Solution(object):
 
 ## single_number_3
 
-```
+```python
 #! /usr/bin/python3
 # coding: utf-8
 
@@ -138,46 +142,3 @@ nums = [1, 2, 1, 3, 2, 5]
 print(solution.singleNumber(nums))
 
 ```
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
