--- a/_posts/计算机-操作系统进程调度.md
+++ b/_posts/计算机-操作系统进程调度.md
@@ -2,7 +2,8 @@ title: OS-模拟进程调度实验
 date: 2015-12-08 23:13:49
 categories: 操作系统
 tags: 操作系统
-
+cover_img:
+description: 进程调度是处理器管理的核心内容。本实验要求用高级语言编写和调试一个简单的进程调度程序，通过本实验加深对进程控制块、进程队列等概念的了解，掌握A. `优先数调度算法(Priority)` 以及B. `轮转调度算法(Round-Robin)` 的具体实施方法。
 ---
 
 ### 实验目的
