--- a/_posts/转载-架构师成长之路2017-80篇精选.md
+++ b/_posts/转载-架构师成长之路2017-80篇精选.md
@@ -9,6 +9,8 @@ keywords: 架构
 categories: 架构
 ---
 
+![cover_img](http://qiniucdn.timilong.com/1543736759592.jpg)
+
 > 转载自: 微信公众号，[架构师之路](https://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960945&idx=1&sn=d08f33c5f317fee8956252da8e0236b6&chksm=bd2d03ad8a5a8abb0370b826b7384a4095a5ed36238f0911d102b0ceee8e5d2fbe3bc80c56d9&scene=21#wechat_redirect)
 
 ## 【架构必备】
