--- a/_posts/转载-架构师成长之路2017-80篇精选.md
+++ b/_posts/转载-架构师成长之路2017-80篇精选.md
@@ -19,153 +19,145 @@ categories: 架构
 [《TCP接入层的负载均衡、高可用、扩展性架构设计》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960086&idx=1&sn=70bbe7165ecddc7896767f4503a927fe&chksm=bd2d06ca8a5a8fdc67fcacb169583f53a968fdf623a20395926059d44e6abae6b2e56ff1f9f9&scene=21#wechat_redirect)
 [《配置中心架构设计演进》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960061&idx=1&sn=3747338a91e85fc33f43d9c1bb98ab10&chksm=bd2d07218a5a8e37ad2e5078736d2449a6ba1e0d75bb18d09990a5f3dcc3af2b7ff414158adb&scene=21#wechat_redirect)
 [《跨公网调用的大坑与架构优化》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960105&idx=1&sn=0069f2264e227e86a63ee50a4899e0a7&chksm=bd2d06f58a5a8fe33271ed3a378932ad023af7a9004d7fdb44e30a53d53928f984f293a41256&scene=21#wechat_redirect)
-[《DNS在架构设计中的巧用》]()
-[《消息如何在网络上安全传输》]()
-[《10W定时任务，如何高效触发》]()
-[《工作线程究竟设置为多少合适》]()
-[《URI设计原则》]()
+[《DNS在架构设计中的巧用》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960118&idx=1&sn=767e038cb4378be1c88dd42569a9264f&chksm=bd2d06ea8a5a8ffc7c69c71c2153b10565ecf72b6957c5667fbf9099c9f5478111132e967a35&scene=21#wechat_redirect)
+[《消息如何在网络上安全传输》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960315&idx=1&sn=8592c5cd15732096bb3b84b3074a2d37&chksm=bd2d06278a5a8f310e3ac5bcdf82b5ec0815a3175466b999d58e173c89900dec00a55aa3f0bb&scene=21#wechat_redirect)
+[《10W定时任务，如何高效触发》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959957&idx=1&sn=a82bb7e8203b20b2a0cb5fc95b7936a5&chksm=bd2d07498a5a8e5f9f8e7b5aeaa5bd8585a0ee4bf470956e7fd0a2b36d132eb46553265f4eaf&scene=21#wechat_redirect)
+[《工作线程究竟设置为多少合适》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960260&idx=1&sn=051fd566d43d7fd35724bdf55484ee5f&chksm=bd2d06188a5a8f0e64467381c7b3df5bdcb7f81ba055d5d21ec2f8b888492be15527d23070b0&scene=21#wechat_redirect)
+[《URI设计原则》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960359&idx=1&sn=a036190cc369507aa67de9c9281fdc38&chksm=bd2d01fb8a5a88edd8b1750b8564a3e9eec90e19235f1fa7edce82ee2731e8beed668c9cc015&scene=21#wechat_redirect)
 
 
 
 ## 【一致性】
 
-[《session一致性架构设计实践》]()
-[《MySQL双主架构一致性优化》]()
-[《库存扣多了，到底怎么整》]()
-[《再议库存扣减多种方案》]()
-[《浅谈CAS在分布式ID生成方案上的应用》]()
-[《CAS下ABA问题及优化方案》]()
+[《session一致性架构设计实践》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960128&idx=1&sn=8e0e409b10ab9db549432af461385314&chksm=bd2d069c8a5a8f8ab5cdee602d4062bbdbb25da290668515d36682afa854e374d2a5ff02004b&scene=21#wechat_redirect)
+[《MySQL双主架构一致性优化》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960253&idx=1&sn=cce01d9d305024b5cc7e1e7149507ae9&chksm=bd2d06618a5a8f77db3731e8687f9a116c0c3113a4b9a8574149530610dc95fbcf7e4ab92ae5&scene=21#wechat_redirect)
+[《库存扣多了，到底怎么整》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960197&idx=1&sn=2e5c17d521772d28d39f31af5d22b34a&chksm=bd2d06598a5a8f4f9de2da89ba8fab711823935442fc632b65d461c923852485ff392c987568&scene=21#wechat_redirect)
+[《再议库存扣减多种方案》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960200&idx=1&sn=fdec629caceee07b3946b6c338b8ceb7&chksm=bd2d06548a5a8f424dd32be960222edf5cecc3c1e5a8fcbb4cfff35e7da6787e702861131597&scene=21#wechat_redirect)
+[《浅谈CAS在分布式ID生成方案上的应用》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960223&idx=1&sn=121716347174eedd6636b1c2c0b96047&chksm=bd2d06438a5a8f55d35add7dc99940c280264fa7caeacb21f7dc79884d00c050d0367a745f87&scene=21#wechat_redirect)
+[《CAS下ABA问题及优化方案》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960240&idx=1&sn=18c4ce7c3baf6705940847c1c9bf49e3&chksm=bd2d066c8a5a8f7a27acb5603611b5cbcf6396a8a5e5d06571dcd41deaa64e615b097e84fef3&scene=21#wechat_redirect)
 
 
 
 ## 【分层架构设计】
 
-[《互联网分层架构的本质》]()
-[《分层架构，为什么需要服务化》]()
-[《分层架构，是否需要业务服务层》]()
-[《分层架构，为什么需要前后端分离》]()
-[《分层架构，前后端分离的坏处》]()
-[《分层架构，为什么要引入数据库中间层》]()
-[《分层架构，APP分层架构随想》]()
+[《互联网分层架构的本质》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960455&idx=1&sn=02cb2345ae9862edad11113726c49512&chksm=bd2d015b8a5a884d9619cdf7ae0dc1a480979a95abb24bac2645cecd54caec4c6bdb3aa617d7&scene=21#wechat_redirect)
+[《分层架构，为什么需要服务化》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960468&idx=1&sn=82bb21ff787f2ae3db2630e0823f3062&chksm=bd2d01488a5a885eb4bbd2470cbd5f2d92a473a45cac02a5d68f55b5d8f72cd8cbb38b18962a&scene=21#wechat_redirect)
+[《分层架构，是否需要业务服务层》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960482&idx=1&sn=feb27bdd202093a5e4747f7c043415d1&chksm=bd2d017e8a5a8868888e553a30559cb9eefa93e0a1da557342e1a13127ca67143ea87b721363&scene=21#wechat_redirect)
+[《分层架构，为什么需要前后端分离》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960501&idx=1&sn=a452bab31c0457063241df237f955332&chksm=bd2d01698a5a887f9dfa5c6966d9e71bf492a040ab2dbe4e469ef38dd8ee5ab00b7c562a88e8&scene=21#wechat_redirect)
+[《分层架构，前后端分离的坏处》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960541&idx=1&sn=6e123e92e69f09c25ca1c8b81e6037d0&chksm=bd2d01018a5a881735fb37045ed187325f1102f01eaee1e78147d6dc702dccb7d9f1899227ed&scene=21#wechat_redirect)
+[《分层架构，为什么要引入数据库中间层》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960526&idx=1&sn=3fcf5a358d7166a25ba78010882616e3&chksm=bd2d01128a5a8804d2e0699ceef99c00be1635aeef956e0996f1153a0a1cdd78eb68d2fec8f0&scene=21#wechat_redirect)
+[《分层架构，APP分层架构随想》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960548&idx=1&sn=fa268b779440f75ccd5b4cd18a48d8e9&chksm=bd2d01388a5a882e9c1cff970ab559a5580fe884b2f1e77d5c93d1e08aad52c8e8be55a7aa5c&scene=21#wechat_redirect)
 
 
 
 ## 【数据库-SQL】
 
-[《或许你不知道的10条SQL技巧》]()
-[《MySQL索引or/in/union优化》]()
-[《58到家数据库30条军规解读》]()
-[《再议58到家数据库军规》]()
-[《赶集MySQL军规》]()
+[《或许你不知道的10条SQL技巧》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960280&idx=1&sn=da519cff7081ab347eb1aaa4f0f4f408&chksm=bd2d06048a5a8f123730ed91b60ac2f55ec5eb92774f24ec45c3fc0d004aea514e6fc3990e0e&scene=21#wechat_redirect)
+[《MySQL索引or/in/union优化》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960277&idx=1&sn=bc452fbe863fd915c08f95a680e4bdbe&chksm=bd2d06098a5a8f1fa0262290a65b6a6634f84d394b072f701ed44a6df9dd4b9df8c926537a59&scene=21#wechat_redirect)
+[《58到家数据库30条军规解读》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959906&idx=1&sn=2cbdc66cfb5b53cf4327a1e0d18d9b4a&chksm=bd2d07be8a5a8ea86dc3c04eced3f411ee5ec207f73d317245e1fefea1628feb037ad71531bc&scene=21#wechat_redirect)
+[《再议58到家数据库军规》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959910&idx=1&sn=6b6853b70dbbe6d689a12a4a60b84d8b&chksm=bd2d07ba8a5a8eac6783bac951dba345d865d875538755fe665a5daaf142efe670e2c02b7c71&scene=21#wechat_redirect)
+[《赶集MySQL军规》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960775&idx=1&sn=1a9c9f4b94dfe71ad2528fb2c84f5ec7&chksm=bd2d001b8a5a890d302d139ea42e9ffde44407738a618865934e40b8e35486b13cafca2933f6&scene=21#wechat_redirect)
 
 
 
 ## 【数据库架构】
 
-[《100亿数据量1万属性10万并发数据库架构设计》]()
-[《数据库秒级平滑扩容架构方案》]()
-[《业界难题，跨库分页的四种方案》]()
-[《100亿数据平滑迁移，不停服务》]()
-[《MySQL数据冗余的三种方案》]()
+[《100亿数据量1万属性10万并发数据库架构设计》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959855&idx=1&sn=f33abe8ec598c273f29cebb9365ece59&chksm=bd2d07f38a5a8ee58a944507a134e1da1efc3ac9c4d1c4cff261137cd986e51f5fe7cee9de15&scene=21#wechat_redirect)
+[《数据库秒级平滑扩容架构方案》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959883&idx=1&sn=e7df8510c7096a5b069e0f12eaaca010&chksm=bd2d07978a5a8e815c2ae41b16b6b4c579923502fb919008a22bb108a1e920109f25387f8903&scene=21#wechat_redirect)
+[《业界难题，跨库分页的四种方案》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959942&idx=1&sn=e9d3fe111b8a1d44335f798bbb6b9eea&chksm=bd2d075a8a5a8e4cad985b847778aa83056e22931767bb835132c04571b66d5434020fd4147f&scene=21#wechat_redirect)
+[《100亿数据平滑迁移，不停服务》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959992&idx=1&sn=eb2fbd7d7922db42a593c304e50a65b7&chksm=bd2d07648a5a8e72d489022ec6006274d7e43ab48449b255d5661658c2af8e9221977a9609ed&scene=21#wechat_redirect)
+[《MySQL数据冗余的三种方案》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960255&idx=1&sn=1bf42b6d8f5658f9d8b54274d62ca714&chksm=bd2d06638a5a8f757502004f4d206f1a4e0f3e8ab4b1d3ba0635308e7d5b7a30860ae6d91e0c&scene=21#wechat_redirect)
 
 
 
 ## 【数据库-容量】
 
-[《每每谈到数据库架构，我们在讨论什么》]()
-[《用户中心，数据库架构优化与实践》]()
-[《帖子中心，数据库架构优化与实践》]()
-[《好友中心，数据库架构优化与实践》]()
-[《订单中心，如何做到数据库无限容量》]()
+[《每每谈到数据库架构，我们在讨论什么》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960158&idx=1&sn=019e9dca6e074f62478b2562044cf8de&chksm=bd2d06828a5a8f945e1e6c2aa4702f48b7857ac9a79acf867496f25b28c86e2f28bed19b38e4&scene=21#wechat_redirect)
+[《用户中心，数据库架构优化与实践》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960212&idx=1&sn=ab4c52ab0309f7380f7e0207fa357128&chksm=bd2d06488a5a8f5e3b7c9de0cc5936818bd9a6ed4058679ae8d819175e0693c6fbd9cdea0c87&scene=21#wechat_redirect)
+[《帖子中心，数据库架构优化与实践》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960274&idx=1&sn=81714a692f3c29395c6e2ff3e8f00350&chksm=bd2d060e8a5a8f188c90253a496c97661da7f3bcab9d42c48b95665fae3916b2c2cdc2ea33e6&scene=21#wechat_redirect)
+[《好友中心，数据库架构优化与实践》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960302&idx=1&sn=ba3d794bd9cc42bead23b7877ad54643&chksm=bd2d06328a5a8f24d9d43a36093dc701c63393e61781ff7fa1e47e5d2ae0631edb7cf514bb6d&scene=21#wechat_redirect)
+[《订单中心，如何做到数据库无限容量》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960373&idx=1&sn=abf7d36840c4d3d556b17a8776ee536c&chksm=bd2d01e98a5a88ff0cbf615cb3444668ccdfca58d5dca2da00ed0cc8948585b7509adf648db0&scene=21#wechat_redirect)
 
 
 
 ## 【数据库中间件】
 
-[《数据库中间件，需求调研》]()
-[《数据库中间件，cobar调研笔记》]()
-[《数据库中间件，TDDL调研笔记》]()
-[《数据库中间件，atlas调研笔记》]()
-[《数据库中间件，mysql-proxy调研笔记》]()
-[《假如让你来设计数据库中间件》]()
+[《数据库中间件，需求调研》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960679&idx=1&sn=aecca24f1150e353bcf9e63c9e6ae7b4&chksm=bd2d00bb8a5a89ad9820ae4b2b674cd0508be87be6b2d802b4417a864aad7db2eb9ccf19635c&scene=21#wechat_redirect)
+[《数据库中间件，cobar调研笔记》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960594&idx=1&sn=b9d39a5591ceeee4e7896627482f05f6&chksm=bd2d00ce8a5a89d885deb207bbdb4a265862888e62fd18c1091830a418b58d4dec1753c6fab9&scene=21#wechat_redirect)
+[《数据库中间件，TDDL调研笔记》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960601&idx=1&sn=4ea55404a2fc96dc5a7bb613bb9e3d32&chksm=bd2d00c58a5a89d307e062e4ad5fe5f0091d514b65881d0829e8f26c5aee965b225fd3eb1909&scene=21#wechat_redirect)
+[《数据库中间件，atlas调研笔记》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960656&idx=1&sn=06717a19b6be3adfdb90e8c57d3274b8&chksm=bd2d008c8a5a899ad044dc6db27a07981937de61257112651f8d05d981a5efe86845c0248adf&scene=21#wechat_redirect)
+[《数据库中间件，mysql-proxy调研笔记》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960133&idx=1&sn=07acfeac5306f92f81dfccf4c880da4f&chksm=bd2d06998a5a8f8fc8c3bbb2c2ea01825ebe6576a35aa4d9789774dba0f7964baf4edf584f1b&scene=21#wechat_redirect)
+[《假如让你来设计数据库中间件》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960632&idx=1&sn=769f12c5180bdc37d71c99cdf7b4077f&chksm=bd2d00e48a5a89f2fa42e0c360e31c28cfd9cce7ab31b425cb5ef8da43bef117c95d0ca8c2cd&scene=21#wechat_redirect)
 
 
 
 ## 【架构解耦】
 
-[《小小的IP，大大的耦合，如何解耦》]()
-[《小小的公共库，大大的耦合，如何解耦》]()
-[《数据库耦合，如何解耦》]()
-[《为何服务化了，耦合却更加严重》]()
-[《MQ，互联网架构解耦神器》]()
-[《配置中心，互联网架构解耦利器》]()
+[《小小的IP，大大的耦合，如何解耦》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960643&idx=1&sn=adb2660bc1a367e118d0a3a799a312fa&chksm=bd2d009f8a5a898917ebe65caf0dc31d3f257594d5c18a468ebef344877b64e989ee292bf22e&scene=21#wechat_redirect)
+[《小小的公共库，大大的耦合，如何解耦》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960650&idx=1&sn=7c63fdc50a130e1d9fc3e5b6791ce01f&chksm=bd2d00968a5a89801861bd1665ad60fe240b5ff3d6eab984e70938d9cfd6502aca8de5686e0c&scene=21#wechat_redirect)
+[《数据库耦合，如何解耦》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960667&idx=1&sn=850cc7370b7fe3fec43878e39baadb2b&chksm=bd2d00878a5a89917bf55546a0c1b44523190679849953cfcc94c886bc5b77ad136006b448f1&scene=21#wechat_redirect)
+[《为何服务化了，耦合却更加严重》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960690&idx=1&sn=2631832538639dde2de42e4dfc7008ac&chksm=bd2d00ae8a5a89b8e636e25d0d83723244a6462a9cfd4f477865899b7d72f3d899a1de5892ca&scene=21#wechat_redirect)
+[《MQ，互联网架构解耦神器》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960726&idx=1&sn=0fdaf0e7040318aabfeba553f815d691&chksm=bd2d004a8a5a895ca80180443cc0f18e66b3d15dbbbd120dabaf3e6d4ef00fbc1030bf41c24b&scene=21#wechat_redirect)
+[《配置中心，互联网架构解耦利器》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960763&idx=1&sn=63da208faee72464fa11691215229bc4&chksm=bd2d00678a5a8971fd2218247accac0f2367603c981c1d3c705d60d08a212ca2399f4bf076e0&scene=21#wechat_redirect)
 
 
 
 ## 【MQ】
 
-[《究竟什么时候使用MQ》]()
-[《MQ，如何做到消息必达》]()
-[《MQ，如何做到消息幂等》]()
-[《MQ，如何做到消息延时》]()
-[《MQ，如何做到削峰填谷》]()
+[《究竟什么时候使用MQ》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960012&idx=1&sn=c6af5c79ecead98daa4d742e5ad20ce5&chksm=bd2d07108a5a8e0624ae6ad95001c4efe09d7ba695f2ddb672064805d771f3f84bee8123b8a6&scene=21#wechat_redirect)
+[《MQ，如何做到消息必达》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959966&idx=1&sn=068a2866dcc49335d613d75c4a5d1b17&chksm=bd2d07428a5a8e54162ad8ea8e1e9302dfaeb664cecc453bd16a5f299820755bd2e1e0e17b60&scene=21#wechat_redirect)
+[《MQ，如何做到消息幂等》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960002&idx=1&sn=c0775231bccf002c3178eabe43f1cdcb&chksm=bd2d071e8a5a8e08c3a5287247ea41dee6b2621e6ffafbf909ec1e8a866b7c816eeeea227246&scene=21#wechat_redirect)
+[《MQ，如何做到消息延时》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959961&idx=1&sn=afec02c8dc6db9445ce40821b5336736&chksm=bd2d07458a5a8e5314560620c240b1c4cf3bbf801fc0ab524bd5e8aa8b8ef036cf755d7eb0f6&scene=21#wechat_redirect)
+[《MQ，如何做到削峰填谷》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960021&idx=1&sn=4bbe275c249a70ab20e36959fc01d4e0&chksm=bd2d07098a5a8e1fd9b505778b551002ab59c35953fa3deaaddc79e3f21bcea5ff48076b4a89&scene=21#wechat_redirect)
 
 
 
 ## 【搜索】
 
-[《搜索引擎的原理，架构与细节》]()
-[《流量从小到大，检索架构演进》]()
-[《全网搜索引擎，如何检索到15分钟之前生成的网页》]()
+[《搜索引擎的原理，架构与细节》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959895&idx=1&sn=de25ce2544c088ff9be0b93fd3ea4d15&chksm=bd2d078b8a5a8e9d5ae4339a683d3f980ff2994f3c10c4081c7bab7f0d77f37521de95e974bf&scene=21#wechat_redirect)
+[《流量从小到大，检索架构演进》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959917&idx=1&sn=8faeae7419a756b0c355af2b30c255df&chksm=bd2d07b18a5a8ea75f16f7e98ea897c7e7f47a0441c64bdaef8445a2100e0bdd2a7de99786c0&scene=21#wechat_redirect)
+[《全网搜索引擎，如何检索到15分钟之前生成的网页》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959949&idx=1&sn=83f78cf6293714bd1fd97a11ff7c2c35&chksm=bd2d07518a5a8e47e6fce9fc03cddec1d8a43f2b4ac67cfbbf73a55143593da8a132da7a0815&scene=21#wechat_redirect)
 
 
 
 ## 【典型系统】
 
-[《秒杀系统，架构与优化细节》]()
-[《广告系统，业务与架构细节》]()
-[《计数系统，架构与优化细节》]()
+[《秒杀系统，架构与优化细节》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959391&idx=1&sn=fb28fd5e5f0895ddb167406d8a735548&scene=21#wechat_redirect)
+[《广告系统，业务与架构细节》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960148&idx=1&sn=7c8a2d789fb20981355e49c3defe0229&chksm=bd2d06888a5a8f9e5ef5cf6cfa415d06800f5468148a0ba7a802e646aeec9610823ec0fc6d5d&scene=21#wechat_redirect)
+[《计数系统，架构与优化细节》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960185&idx=1&sn=0acd4a563c8c9684373fd05c116c4441&chksm=bd2d06a58a5a8fb3281acd95a7d9494161e75dcd27e95fdd526fce2b031ba79c4153bf255cee&scene=21#wechat_redirect)
 
 
 
 ## 【线上实战】
 
-[《线上问题排查实战》]()
-[《CPU100%问题排查实战》]()
-[《内存OOM问题排查实战》]()
+[《线上问题排查实战》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960323&idx=1&sn=e04af14d2ebf939133869e0f18bb0dd1&chksm=bd2d01df8a5a88c98c3cb94a99334a16b372fd997f36bc757a38bb44b70d977797fa840064dc&scene=21#wechat_redirect)
+[《CPU100%问题排查实战》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960332&idx=1&sn=63cb23e04ac4bf926434f34001c0718a&chksm=bd2d01d08a5a88c6a01e62533162cc3535defb37cefa61a800e405edda8240ad17432e023d53&scene=21#wechat_redirect)
+[《内存OOM问题排查实战》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960342&idx=1&sn=9b2dbbb2cfd7710f25be1a0862a9b2be&chksm=bd2d01ca8a5a88dcc14608cb00e0dbde11869d053ee8c83bc96e7b4a0fbd71d28d7fbb009c98&scene=21#wechat_redirect)
 
 
 
 ## 【一分钟系列】
 
-[《1分钟理解LF线程模型》]()
-[《1分钟了解索引技巧》]()
-[《1分钟了解四层/七层反向代理》]()
-[《1分钟写好连接池》]()
-[《1分钟了解好接口的设计原则》]()
+[《1分钟理解LF线程模型》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959914&idx=1&sn=3600fc162970b39afe25d65bee10cd2e&chksm=bd2d07b68a5a8ea03c2b1372345991b74aa412b7fd96cc82e9ed0eb38e8dd481bf5d8b7b631c&scene=21#wechat_redirect)
+[《1分钟了解索引技巧》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960258&idx=1&sn=caf8295fa5c0ee47d6b9e6bf5cffcb49&chksm=bd2d061e8a5a8f08374ddc84a3c59355368b840ab38ba97782947e02c0d9d6d3c289032b3d39&scene=21#wechat_redirect)
+[《1分钟了解四层/七层反向代理》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960131&idx=1&sn=a3bbcbe03f9e12d32ba751ce6ffae067&chksm=bd2d069f8a5a8f895fed39cad842f6f5a390bb18493f964b910270128f19f0b8af1d1f30b5c7&scene=21#wechat_redirect)
+[《1分钟写好连接池》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959821&idx=1&sn=4ede084b05ce81a9a5ddb87ec62434bb&chksm=bd2d07d18a5a8ec7726619dbb9f1e99df8239ebd07d5f01d748e01c08dd543f0a434945301c6&scene=21#wechat_redirect)
+[《1分钟了解好接口的设计原则》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960736&idx=1&sn=bdbe301539eadead10da880ce7d51d55&chksm=bd2d007c8a5a896a1ab5743438a05e8553f41bca9761d2b2b9e78f398f6f30ba69702cb7da59&scene=21#wechat_redirect)
 
 
 
 ## 【评论比文章精彩，架构讨论】
 
-[《服务读写分离，是否可行？》]()
-[《服务读写分离，绝不推荐》]()
-[《服务通过缓存传递数据，是否可行？》]()
-[《服务通过缓存传递数据，绝不推荐》]()
+[《服务读写分离，是否可行？》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960734&idx=1&sn=df69c556bcd87f9758d4c4c7d4625a7a&chksm=bd2d00428a5a89541874a438e96ded1fa5a0b27d4ba5e9cd62273b6295d740fe4e032ccd57f7&scene=21#wechat_redirect)
+[《服务读写分离，绝不推荐》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960749&idx=1&sn=3577ba4bdc80cf1820e14b1610ade7b4&chksm=bd2d00718a5a896754dc53798af38ab46347f85c084c2469761961e3716f8351782cbd86cb84&scene=21#wechat_redirect)
+[《服务通过缓存传递数据，是否可行？》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960768&idx=1&sn=7a10095e20208e2cb6ac2ce68f1bbd27&chksm=bd2d001c8a5a890a8db2f512ad85ddb860d8dbe0ca99afdc2af9a7eb0dc4620160111c53a26b&scene=21#wechat_redirect)
+[《服务通过缓存传递数据，绝不推荐》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960786&idx=1&sn=58fce15972702181cf0711700c31e29d&chksm=bd2d000e8a5a891827bf65f3d4ff41445bb41243f1a2bbb535e09fd8fdb8a52229523261f384&scene=21#wechat_redirect)
 
 
 
 ## 【通用】
 
-[《如何精准理解leader布置的任务》]()
-[《如何快速精准的和leader沟通》]()
-[《罗振宇送给新员工的四句话》]()
-[《远离中国式辩论》]()
-
-
-
-## 【惊喜】
-
-[《架构师之路，支持历史文章搜索》]()
-
-
+[《如何精准理解leader布置的任务》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960035&idx=1&sn=e0a14e8539b001e4d6d149164987235b&chksm=bd2d073f8a5a8e290202fcdfac077744eab84e6549e0608698ae5e1d3ed221ee97ca21f42e6f&scene=21#wechat_redirect)
+[《如何快速精准的和leader沟通》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960073&idx=1&sn=3ac3bb78bb643d73e9e68d713d6eceeb&chksm=bd2d06d58a5a8fc378e7cde71808c09dea9b4d5462deec0238a3d6f0ade62976a3d2bd0faafb&scene=21#wechat_redirect)
+[《罗振宇送给新员工的四句话》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960162&idx=1&sn=0a4814e76ae98f7b4597205bc9b4402c&chksm=bd2d06be8a5a8fa8ea9cac53144d780160c853329af461b6ffa2d8002f93425c394140d1edb3&scene=21#wechat_redirect)
+[《远离中国式辩论》](http://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651960490&idx=1&sn=c55da79ed49af175d86c71678f047a50&chksm=bd2d01768a5a886064fb23c75f6f81133584102ec687f4e1b0659e1a583a8178e9e127829427&scene=21#wechat_redirect)
