--- a/_posts/转载-互联网架构设计.md
+++ b/_posts/转载-互联网架构设计.md
@@ -73,8 +73,8 @@ categories: 架构
 
 3）可以有更复杂的保护策略, 这样的话，不但能借助“动态权重”来实施动态自适应的异构服务器负载均衡，还能在客户端层面更优雅的实施过载保护，在某个下游service快要响应不过来的时候，给其喘息的机会。
 
-需要注意的是：要防止客户端的过载保护引起service的雪崩，如果“整体负载”已经超过了“service集群”的处理能力，怎么转移请求也是处理不过来的，还得通过抛弃请求来实施自我保护。 
-转自：https://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959601&idx=1&sn=5684c39676b1f6d9366d9d15a2cdcec3&scene=21#wechat_redirect
+需要注意的是：要防止客户端的过载保护引起service的雪崩，如果“整体负载”已经超过了“service集群”的处理能力，怎么转移请求也是处理不过来的，还得通过抛弃请求来实施自我保护。 转自：https://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959601&idx=1&sn=5684c39676b1f6d9366d9d15a2cdcec3&scene=21#wechat_redirect
+
 
 ## 主从DB与cache一致性
 
@@ -161,11 +161,11 @@ mysql5.7 -> 按照GTID并行复制
 ## 即使删了全库，保证半小时恢复
 保证数据的安全性是DBA第一要务，需要进行：
 
-（1）全量备份+增量备份，并定期进行恢复演练，但该方案恢复时间较久，对系统可用性影响大
+1）全量备份+增量备份，并定期进行恢复演练，但该方案恢复时间较久，对系统可用性影响大
 
-（2）1小时延时从，双份1小时延时从能极大加速数据库恢复时间
+2）1小时延时从，双份1小时延时从能极大加速数据库恢复时间
 
-（3）个人建议1小时延时从足够，后台只读服务可以连1小时延时从，提高资源利用率
+3）个人建议1小时延时从足够，后台只读服务可以连1小时延时从，提高资源利用率
 
 
 ## 啥，又要为表增加一列属性？
@@ -183,44 +183,44 @@ mysql5.7 -> 按照GTID并行复制
 
 基本原理是：
 
-（1）先创建一个扩充字段后的新表user_new(uid, name, passwd, age, sex)
+1）先创建一个扩充字段后的新表user_new(uid, name, passwd, age, sex)
 
-（2）在原表user上创建三个触发器，对原表user进行的所有insert/delete/update操作，都会对新表user_new进行相同的操作
+2）在原表user上创建三个触发器，对原表user进行的所有insert/delete/update操作，都会对新表user_new进行相同的操作
 
-（3）分批将原表user中的数据insert到新表user_new，直至数据迁移完成
+3）分批将原表user中的数据insert到新表user_new，直至数据迁移完成
 
-（4）删掉触发器，把原表移走（默认是drop掉）
+4）删掉触发器，把原表移走（默认是drop掉）
 
-（5）把新表user_new重命名（rename）成原表user
+5）把新表user_new重命名（rename）成原表user
 
 扩充字段完成。
 
 优点：整个过程不需要锁表，可以持续对外提供服务
 
 操作过程中需要注意：
-（1）变更过程中，最重要的是冲突的处理，一条原则，以触发器的新数据为准，这就要求被迁移的表必须有主键（这个要求基本都满足）
+1）变更过程中，最重要的是冲突的处理，一条原则，以触发器的新数据为准，这就要求被迁移的表必须有主键（这个要求基本都满足）
 
-（2）变更过程中，写操作需要建立触发器，所以如果原表已经有很多触发器，方案就不行（互联网大数据高并发的在线业务，一般都禁止使用触发器）
+2）变更过程中，写操作需要建立触发器，所以如果原表已经有很多触发器，方案就不行（互联网大数据高并发的在线业务，一般都禁止使用触发器）
 
-（3）触发器的建立，会影响原表的性能，所以这个操作建议在流量低峰期进行
+3）触发器的建立，会影响原表的性能，所以这个操作建议在流量低峰期进行
 
 pt-online-schema-change是DBA必备的利器，比较成熟，在互联网公司使用广泛。
 
 ### 哪些方案一定是不行的
 
-（1）alter table add column
+1）alter table add column
 
 要坚持这个方案的，也不多解释了，大数据高并发情况下，一定不可行
 
-（2）通过增加表的方式扩展，通过外键join来查询
+2）通过增加表的方式扩展，通过外键join来查询
 
 大数据高并发情况下，join性能较差，一定不可行
 
-（3）通过增加表的方式扩展，通过视图来对外
+3）通过增加表的方式扩展，通过视图来对外
 
 一定不可行。大数据高并发情况下，互联网不怎么使用视图，至少58禁止使用视图
 
-（4）必须遵循“第x范式”的方案
+4）必须遵循“第x范式”的方案
 
 一定不可行。互联网的主要矛盾之一是吞吐量，为了保证吞吐量甚至可能牺牲一些事务性和一致性，通过反范式的方式来确保吞吐量的设计是很常见的，例如：冗余数据。互联网的主要矛盾之二是可用性，
 
@@ -228,11 +228,11 @@ pt-online-schema-change是DBA必备的利器，比较成熟，在互联网公司
 
 ### 哪些方案可行，但文章未提及
 
-（1）提前预留一些reserved字段
+1）提前预留一些reserved字段
 
 这个是可以的。但如果预留过多，会造成空间浪费，预留过少，不一定达得到扩展效果。
 
-（2）通过增加表的方式扩展列，上游通过service来屏蔽底层的细节
+2）通过增加表的方式扩展列，上游通过service来屏蔽底层的细节
 
 这个也是可以的。Jeff同学提到的UserExt(uid, newCol1, newCol2)就是这样的方案（但join连表和视图是不行的）
 转自：https://mp.weixin.qq.com/s?__biz=MjM5ODYxMDA5OQ==&mid=2651959765&idx=1&sn=b9916aa95c320e41035977e0a8098ca6&chksm=bd2d04098a5a8d1f3af38f658c05002151e621170949d2e3bb5b1bceea55c64b0477dba4c647&scene=21#wechat_redirect
@@ -261,21 +261,21 @@ pt-online-schema-change是DBA必备的利器，比较成熟，在互联网公司
 ### 为什么要这么这么拆分
 
 为何要将字段短，访问频率高的属性放到一个表内？为何这么垂直拆分可以提升性能？因为：
-（1）数据库有自己的内存buffer，会将磁盘上的数据load到内存buffer里（暂且理解为进程内缓存吧）
+1）数据库有自己的内存buffer，会将磁盘上的数据load到内存buffer里（暂且理解为进程内缓存吧）
 
-（2）内存buffer缓存数据是以row为单位的
+2）内存buffer缓存数据是以row为单位的
 
-（3）在内存有限的情况下，在数据库内存buffer里缓存短row，就能缓存更多的数据
+3）在内存有限的情况下，在数据库内存buffer里缓存短row，就能缓存更多的数据
 
-（4）在数据库内存buffer里缓存访问频率高的row，就能提升缓存命中率，减少磁盘的访问
+4）在数据库内存buffer里缓存访问频率高的row，就能提升缓存命中率，减少磁盘的访问
 
 举个例子就很好理解了：
 
 假设数据库内存buffer为1G，未拆分的user表1行数据大小为1k，那么只能缓存100w行数据。
 
 如果垂直拆分成user_base和user_ext，其中：
-（1）user_base访问频率高（例如uid, name, passwd, 以及一些flag等），一行大小为0.1k
+1）user_base访问频率高（例如uid, name, passwd, 以及一些flag等），一行大小为0.1k
 
-（2）user_ext访问频率低（例如签名, 个人介绍等），一行大小为0.9k
+2）user_ext访问频率低（例如签名, 个人介绍等），一行大小为0.9k
  那边内存buffer就就能缓存近乎1000w行user_base的记录，访问磁盘的概率会大大降低，数据库访问的时延会大大降低，吞吐量会大大增加。
 
