--- a/_posts/转载-缓存架构-到底设计些什么.md
+++ b/_posts/转载-缓存架构-到底设计些什么.md
@@ -2,19 +2,39 @@
 title: 转载-缓存架构-到底设计些什么
 cover_img: 'http://qiniucdn.timilong.com/'
 date: 2018-12-17 17:23:21
-tags:
+tags: 架构
 feature_img:
-description:
-keywords:
-categories:
+description: 关于缓存架构中，会涉及到的问题.
+keywords: 架构
+categories: 架构
 ---
 
-> 转载自: 微信公众号，[架构师之路](https://juejin.im/book/5af56a3c518825426642e004)
-> 本文系原创, 转载请联系作者 [Timilong](http://blog.timilong.com/about)
+> 转载自: 微信公众号，[架构师之路](https://mp.weixin.qq.com/s/DM0dKHyD3FweVSHcjabLaw)
 
+## 不同业务场景下的缓存选型
 
+> 什么是穿透型缓存，什么是旁路型缓存？
+> 什么时候用进程内缓存，什么时候用缓存服务？
+> 啥时候用memcache，啥时候用redis？又或者？
+> 缓存在微服务体系架构中的位置，以及设计原则？
 
+## 关于缓存的设计折衷
 
+> 什么时候适合使用缓存？
+> 引入缓存后，对读写业务流程有什么影响？
+> 到底应该修改缓存，还是淘汰缓存？
+> 应该先操作数据库，还是操作缓存？
 
+## 关于缓存的架构设计
+> 缓存失效会引发什么雪崩？
+> 缓存是否需要保证高可用？如何保证高可用？
+> 缓存如何保证与数据库中的数据一致性？
+> 缓存如何保证无限量的扩展性？
 
+## 各类典型业务的缓存实践
+> …
+
+很多人说，遇到瓶颈，就用缓存。
+缓存如同万金油一般。
+缓存是架构设计中非常重要的一环。
 
