--- a/_posts/转载-缓存架构-到底设计些什么.md
+++ b/_posts/转载-缓存架构-到底设计些什么.md
@@ -1,6 +1,6 @@
 ---
 title: 转载-缓存架构-到底设计些什么
-cover_img: 'http://qiniucdn.timilong.com/'
+cover_img: http://qiniucdn.timilong.com/1544683323292.jpg
 date: 2018-12-17 17:23:21
 tags: 架构
 feature_img:
