--- a/_posts/转载-缓存架构-到底设计些什么.md
+++ b/_posts/转载-缓存架构-到底设计些什么.md
@@ -9,6 +9,8 @@ keywords: 架构
 categories: 架构
 ---
 
+![cover_img: ](http://qiniucdn.timilong.com/1544683323292.jpg)
+
 > 转载自: 微信公众号，[架构师之路](https://mp.weixin.qq.com/s/DM0dKHyD3FweVSHcjabLaw)
 
 ## 不同业务场景下的缓存选型
