--- a/_posts/读书-一个陌生女人的来信.md
+++ b/_posts/读书-一个陌生女人的来信.md
@@ -18,7 +18,7 @@ categories: 读书
 
 ## 作者简介
 
-斯台芬·茨威格（1881—1942），奥地利小说家、诗人、剧作家和传记作家。
+斯蒂芬·茨威格（1881—1942），奥地利小说家、诗人、剧作家和传记作家。
 
 出身富裕犹太家庭，青年时代在维也纳和柏林攻读哲学和文学，日后周游世界，结识罗曼·罗兰和弗洛伊德等人并深受影响。
 
