--- a/_posts/转载-互联网架构设计.md
+++ b/_posts/转载-互联网架构设计.md
@@ -9,20 +9,20 @@ keywords: 架构
 categories: 架构
 ---
 
-> 转载自: 发者开知识库，[架构师之路总结01](http://www.itdaan.com/blog/2018/04/27/d9d4f6a074ed53401cd73c1dee33d9d9.html)
+> 转载自: 开发者知识库，[架构师之路总结01](http://www.itdaan.com/blog/2018/04/27/d9d4f6a074ed53401cd73c1dee33d9d9.html)
 
 
 ## 互联网架构设计如何进行容量评估：
 
-【步骤一：评估总访问量】 -> 询问业务、产品、运营
+1) 【步骤一：评估总访问量】 -> 询问业务、产品、运营
 
-【步骤二：评估平均访问量QPS】-> 除以时间，一天算4w秒
+2) 【步骤二：评估平均访问量QPS】-> 除以时间，一天算4w秒
 
-【步骤三：评估高峰QPS】 -> 根据业务曲线图来
+3)【步骤三：评估高峰QPS】 -> 根据业务曲线图来
 
-【步骤四：评估系统、单机极限QPS】 -> 压测很重要
+4)【步骤四：评估系统、单机极限QPS】 -> 压测很重要
 
-【步骤五：根据线上冗余度回答两个问题】 -> 估计冗余度与线上冗余度差值
+5)【步骤五：根据线上冗余度回答两个问题】 -> 估计冗余度与线上冗余度差值
 
 
 ## 单点系统架构的可用性与性能优化
