--- a/source/_posts/随笔-天干地支.md
+++ b/source/_posts/随笔-天干地支.md
@@ -1,6 +1,6 @@
 ---
 title: 随笔-天干地支
-cover_img: http://qiniucdn.timilong.com/1544683276184.jpg 
+cover_img: http://qiniucdn.timilong.com/1544683276184.jpg
 date: 2019-02-22 17:49:15
 tags: 随笔
 feature_img:
@@ -9,7 +9,7 @@ keywords: 随笔
 categories: 随笔
 ---
 
-![cover_img](cover_img: http://qiniucdn.timilong.com/1544683276184.jpg)
+![cover_img](http://qiniucdn.timilong.com/1544683276184.jpg)
 
 
 ## 天干地支
