--- a/source/_posts/人类为什么要探索太空.md
+++ b/source/_posts/人类为什么要探索太空.md
@@ -1,15 +1,15 @@
 ---
 title: 人类为什么要探索太空
-cover_img: 'http://qiniucdn.timilong.com/'
+cover_img: 'http://qiniucdn.timilong.com/1544683185657.jpg'
 date: 2019-02-28 10:23:02
-tags:
+tags: 随笔
 feature_img:
-description:
-keywords:
-categories:
+description: 人类为什么要探索宇宙? -- 转载
+keywords: 随笔
+categories: 随笔
 ---
 
-![cover_img]()
+![cover_img](http://qiniucdn.timilong.com/1544683185657.jpg)
 
 作者：存钱罐
 链接：https://www.zhihu.com/question/265533849/answer/553210783
