--- a/source/_posts/读书-增长黑客.md
+++ b/source/_posts/读书-增长黑客.md
@@ -1,6 +1,6 @@
 ---
 title: 读书-增长黑客
-cover_img: http://qiniucdn.timilong.com/155152107630.jpg
+cover_img: http://qiniucdn.timilong.com/1551520855518.jpg
 date: 2019-03-06 09:53:58
 tags: 读书
 feature_img:
@@ -9,8 +9,7 @@ keywords: 读书
 categories: 读书
 ---
 
-![cover_img](http://qiniucdn.timilong.com/155152107630.jpg)
-
+![cover_img](http://qiniucdn.timilong.com/1551520855518.jpg)
 
 > 版权归作者所有，任何形式转载请联系作者。
 > 作者：米豆儿大神（来自豆瓣）
@@ -285,7 +284,7 @@ categories: 读书
 > 15分钟：选择下一周期的增长试验讨论的目的是达成共识，如果出现分歧，增长负责人最后拍板。
 > 5分钟：检查增长想法储备库还有多少想法可以供考虑或者日后启动，如果备选想法的数量有所减少，负责人应该鼓励团队在接下来一周提出更多想法。
 
-## 第二部分，实战
+## 第二部分 实战
 72、扩大获客规模，首先要实现另外两种匹配：1）语音——市场匹配，也就是你对产品优势的描述打动目标用户的程度。2）渠道——产品匹配，即你所选择的营销渠道在向目标用户推广产品时的有效程度。
 
 73、我们的注意力持续时间比金鱼还要短。研究表明，人类的平均专注时间现在是8秒，而在2000年是12秒。专注时间就是将注意力保持在一条心的网络信息上的时间。
