--- a/source/_posts/数据库索引设计与优化-表和索引结构.md
+++ b/source/_posts/数据库索引设计与优化-表和索引结构.md
@@ -1,10 +1,10 @@
 ---
-title: 数据库索引设计与优化-表和索引结构
+title: 数据库索引设计与优化-2表和索引结构
 cover_img: 'http://qiniucdn.timilong.com/'
 date: 2019-07-04 12:47:49
-tags:
-feature_img:
-description:
+tags: MySQL
+feature_img: 
+description: MySQL表和索引结构
 keywords:
 categories:
 ---
