--- a/source/_posts/数据库索引设计与优化-索引.md
+++ b/source/_posts/数据库索引设计与优化-索引.md
@@ -1,15 +1,15 @@
 ---
 title: 数据库索引设计与优化-1索引
-cover_img: 'http://qiniucdn.timilong.com/'
+cover_img: 'http://qiniucdn.timilong.com/1551520911534.jpg'
 date: 2019-07-04 12:43:13
-tags:
-feature_img:
-description:
-keywords:
-categories:
+tags: 数据库
+feature_img: 
+description: 数据库索引设计与优化
+keywords: 数据库
+categories: 数据库
 ---
 
-![cover_img]()
+![cover_img](http://qiniucdn.timilong.com/1551520911534.jpg)
 
 不合适的索引
 
@@ -59,7 +59,7 @@ SELECT 子句没能包含有效的索引
 
 
 
-image.png
+![001](http://qiniucdn.timilong.com/mysql_001.png)
 
 
 
