--- a/source/_posts/数据库索引设计与优化-表和索引结构.md
+++ b/source/_posts/数据库索引设计与优化-表和索引结构.md
@@ -11,6 +11,8 @@ categories: 数据库
 
 ![cover_img](http://qiniucdn.timilong.com/1551521095956.jpg)
 
+> 转载自: [数据库索引设计与优化-2表的索引和结构](https://www.yuque.com/jzqt/xq88yc/zb9spc)
+
 讨论索引设计之前，我们需要先理解 索引 和 表 是如何使组织和使用的。当然具体实现很大程度上取决于具体的关系型 DBMS，不过它们依赖的结构和原则都大致相似。
 
 
