--- a/source/_posts/计算机-浮点数表示方法.md
+++ b/source/_posts/计算机-浮点数表示方法.md
@@ -1,15 +1,15 @@
 ---
 title: 计算机-浮点数表示方法
-cover_img: 'http://qiniucdn.timilong.com/'
+cover_img: 'http://qiniucdn.timilong.com/1551521110524.jpg'
 date: 2019-09-01 13:11:40
-tags:
+tags: 操作系统
 feature_img:
-description:
-keywords:
-categories:
+description: 计算机中浮点数的表示方法
+keywords: 操作系统
+categories: 操作系统
 ---
 
-![cover_img]()
+![cover_img](http://qiniucdn.timilong.com/1551521110524.jpg)
 
 > 转载自: 掘金, [什么, 0.3 - 0.2 ≠ 0.1 ?](https://juejin.im/post/5d67656ff265da03d316d502)
 
